--- a/style.css
+++ b/style.css
@@ -19,3 +19,16 @@ body {
 .task button {
     width: 100%;
 }
+
+.progress-bar {
+  width: 100%;
+  height: 10px;
+  background: #555;
+  overflow: hidden;
+}
+
+.progress-fill {
+  height: 100%;
+  background: #00CC00;
+  transition: width 0.2s;
+}
