--- a/style.css
+++ b/style.css
@@ -21,16 +21,28 @@ body {
 }
 
 .progress-bar {
+    position: relative;
     width: 100%;
     height: 10px;
     background: #555;
     overflow: hidden;
 }
 
+#energy .progress-bar {
+    height: 20px;
+}
+
 .progress-fill {
     height: 100%;
     background: #00CC00;
     transition: width 0.2s;
+}
+
+.progress-value {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 #skills {
