--- a/style.css
+++ b/style.css
@@ -142,3 +142,16 @@ body {
     width: 80px;
     text-align: center;
 }
+
+#perks {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.perk {
+    width: 80px;
+    text-align: center;
+}
+
