--- a/style.css
+++ b/style.css
@@ -155,3 +155,19 @@ body {
     text-align: center;
 }
 
+#game-over-overlay {
+    position: fixed;
+    display: flex;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+
+    background: #0008;
+}
+
+#game-over-box {
+    text-align: center;
+}
