--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 
 #right-column {
     width: 33%;
+    margin-left: 5px;
 }
 
 #zone-name {
@@ -27,10 +28,12 @@ body {
 
 .task {
     width: 100%;
+    padding-bottom: 8px;
 }
 
 .task button {
     width: 50%;
+    height: 30px;
     display: flex;
     align-items: center;
 }
@@ -68,8 +71,8 @@ body {
 }
 
 .task-rep {
-    width: 20px;
-    height: 20px;
+    width: 24px;
+    height: 24px;
     background: grey;
     margin: 3px;
 }
@@ -139,8 +142,12 @@ body {
 }
 
 .item {
-    width: 80px;
+    width: 64px;
     text-align: center;
+}
+
+.item button {
+    width: 100%;
 }
 
 #perks {
@@ -151,7 +158,7 @@ body {
 }
 
 .perk {
-    width: 80px;
+    width: 64px;
     text-align: center;
 }
 
