--- a/style.css
+++ b/style.css
@@ -10,10 +10,12 @@
 */
 
 body {
-    background: linear-gradient(120deg, #102661, #8c386d);
     color: #000;
-    height: 100vh;
-}
+    min-height: 100vh;
+    background: linear-gradient(120deg, #102661, #8c386d);
+    background-attachment: fixed;
+}  
+
 
 #game-area {
     max-width: 900px;
@@ -365,4 +367,27 @@ body {
     font-size: 1em;
     border-radius: 8px;
     background: var(--element-foreground-color);
+}
+
+/* MARK: Messages
+*/
+footer {
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    max-width: 900px;
+    background: #222;
+    padding: 10px 0;
+    background-color: transparent;
+    pointer-events: none;
+}
+.message {
+    background: rgba(0, 0, 0, 0.25);
+    color: #fff;
+    margin: 3px 0;
+    padding: 5px 10px;
+    border-radius: 8px;
 }
