--- a/style.css
+++ b/style.css
@@ -293,6 +293,7 @@ button:hover:enabled {
     background: #000000AA;
     color: #FFF;
     margin-left: 5px;
+    margin-right: 5px;
     padding: 5px;
     border-radius: 5px;
 }
