--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
 
 body {
     color: #000;
-    min-height: 100vh;
+    margin: 8px;
+    min-height: 100vh - (8px * 2);
     background: linear-gradient(120deg, #102661, #8c386d);
     background-attachment: fixed;
 }
