--- a/style.css
+++ b/style.css
@@ -24,18 +24,21 @@ body {
     gap: 10px;
 }
 
-#main-bar {
+#main-area {
     max-width: 900px;
 }
 
-#sidebar {
+#left-sidebar {
     width: 180px;
+}
+
+.sidebar {
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-#sidebar .sidebar-item {
+.sidebar-item {
     width: 100%;
     text-align: center;
     background: var(--element-background-color);
@@ -46,12 +49,12 @@ body {
     -moz-box-sizing: border-box;
 }
 
-#sidebar .item-text {
+.sidebar-item-text {
     display: flex;
     justify-content: space-between;
 }
 
-#sidebar .item-text span {
+.sidebar-item-text span {
     display: inline-flex;
     align-items: flex-end;
 }
@@ -72,8 +75,7 @@ body {
 
 #zone-name {
     text-align: center;
-    margin-top: 0;
-    color: #FFF;
+    margin: 0;
 }
 
 #energy .progress-bar {
@@ -254,7 +256,6 @@ button:hover:enabled {
 
 .sidebar-section {
     position: relative;
-    margin-bottom: 20px;
     background: var(--element-background-color);
     border-radius: 8px;
     padding: 5px;
