--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 :root {
     --element-background-color: rgb(35, 108, 168);
     --element-foreground-color: rgb(49, 144, 221);
+    --game-width: 1100px;
 }
 
 /* MARK: Main areas
@@ -18,18 +19,18 @@ body {
 }
 
 #game-area {
-    max-width: 1150px;
+    width: var(--game-width);
     margin: 0 auto;
     display: flex;
     gap: 10px;
 }
 
 #main-area {
-    max-width: 900px;
+    width: 900px;
 }
 
 #left-sidebar {
-    width: 180px;
+    width: 190px;
 }
 
 .sidebar {
@@ -437,7 +438,7 @@ footer {
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
-    max-width: 900px;
+    width: var(--game-width);
     background: #222;
     padding: 10px 0;
     background-color: transparent;
