--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ body {
     min-height: 100vh - (8px * 2);
     background: linear-gradient(120deg, #102661, #8c386d);
     background-attachment: fixed;
+
+    user-select: none;          /* Standard syntax */
+    -webkit-user-select: none;  /* Safari */
+    -moz-user-select: none;     /* Firefox */
+    -ms-user-select: none;      /* Internet Explorer/Edge */
 }
 
 #game-area {
