Ensure consistency in `box-shadow` values and replace hardcoded `border-radius` with CSS variable.

--- a/style.css
+++ b/style.css
@@ -511,7 +511,7 @@ main {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 
     color: var(--palette-text-primary);
-    box-shadow: 0px 3px 1px -2px rgba(0,0,0,.2),0px 2px 2px 0px rgba(0,0,0,.14),0px 1px 5px 0px rgba(0,0,0,.12);
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2),0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12);
     
     background-color: var(--palette-action-default-hover);
     border-radius: var(--default-border-radius);
@@ -621,7 +621,6 @@ main {
     height: 24px;
     background: #555;
     margin: 3px;
-    border-radius: 5px;
     border-radius: var(--default-border-radius);
 }
 
