--- a/style.css
+++ b/style.css
@@ -6,47 +6,34 @@
     --palette-black: rgb(39,39,47);
     --palette-white: rgb(255,255,255);
     
-    --palette-primary: rgb(23, 55, 141);
-    --palette-primary-text: rgb(255,255,255);
-    --palette-primary-darken: rgb(16, 38, 97);
-    --palette-primary-lighten: rgb(30, 72, 185);
-    --palette-primary-hover: rgba(23, 55, 141,0.05);
+    --palette-primary-paper-color: rgb(35, 108, 168);
+    --palette-secondary-paper-color: rgb(49, 144, 221);
     
-    --palette-secondary: rgb(176, 71, 137);
-    --palette-secondary-text: rgb(255,255,255);
-    --palette-secondary-darken: rgb(140, 56, 109);
-    --palette-secondary-lighten: rgb(194, 104, 161);
-    --palette-secondary-hover: rgba(176, 71, 137,0.05);
-    
-    --palette-tertiary: rgb(185, 30, 72);
-    --palette-tertiary-text: rgb(255,255,255);
-    --palette-tertiary-darken: rgb(141, 23, 55);
-    --palette-tertiary-lighten: rgb(221, 45, 93);
-    --palette-tertiary-hover: rgba(185, 30, 72,0.05);
-    
-    --palette-info: rgb(50,153,255);
+    --palette-background-start: rgb(16, 38, 97);
+    --palette-background-end: rgb(140, 56, 109);
+
+    --palette-info: rgb(23, 112, 196);
     --palette-info-text: rgb(255,255,255);
-    --palette-info-darken: rgb(0, 118, 234);
-    --palette-info-lighten: rgb(92,173,255);
-    --palette-info-hover: rgba(50,153,255,0.05);
+    --palette-info-darken: rgb(15, 73, 128);
+    --palette-info-lighten: rgb(40, 138, 230);
+    --palette-info-hover: rgba(23, 112, 196,0.05);
     
-    --palette-success: rgb(11,186,131);
-    --palette-success-text: rgb(255,255,255);
-    --palette-success-darken: rgb(9,154,108);
-    --palette-success-lighten: rgb(14, 234, 165);
-    --palette-success-hover: rgba(11,186,131,0.05);
+    --palette-success: rgb(22, 196, 88);
+    --palette-success-text:  rgb(39,39,47);
+    --palette-success-darken: rgb(16, 145, 65);
+    --palette-success-lighten: rgb(38, 231, 111);
+    --palette-success-hover: rgba(22, 196, 88,0.05);
     
-    --palette-warning: rgb(255,168,0);
-    --palette-warning-text: rgb(255,255,255);
-    --palette-warning-darken: rgb(214,143,0);
-    --palette-warning-lighten: rgb(255,182,36);
-    --palette-warning-hover: rgba(255,168,0,0.05);
+    --palette-warning: rgb(224, 193, 68);
+    --palette-warning-text:  rgb(39,39,47);
+    --palette-warning-darken: rgb(207, 172, 34);
+    --palette-warning-lighten: rgb(224, 226, 29);
+    --palette-warning-hover: rgba(224, 193, 68,0.05);
     
-    --palette-error: rgb(246,78,98);
-    --palette-error-rgb: 246,78,98;
+    --palette-error:  rgb(214, 60, 60);
     --palette-error-text: rgb(255,255,255);
-    --palette-error-darken: rgb(244,47,70);
-    --palette-error-lighten: rgb(248,119,134);
+    --palette-error-darken: rgb(184, 39, 39);
+    --palette-error-lighten: rgb(231, 67, 68);
     --palette-error-hover: rgba(246,78,98,0.05);
     
     --palette-dark: rgb(39,39,47);
@@ -72,6 +59,7 @@
     --typography-default-lineheight: 1.43;
     --typography-default-letterspacing: 0.1071em;
     --typography-default-text-transform: none;
+    --typography-default-text-color: rgb(255,255,255);
 
     --typography-h1-family: Roboto, Helvetica, Arial;
     --typography-h1-size: 6rem;
@@ -164,34 +152,6 @@
     --typography-overline-letterspacing: .08333em;
     --typography-overline-text-transform: none;
     
-    /* MARK: Variables, elevation */
-    --elevation-0: none;
-    --elevation-1: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
-    --elevation-2: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
-    --elevation-3: 0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);
-    --elevation-4: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
-    --elevation-5: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12);
-    --elevation-6: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
-    --elevation-7: 0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12);
-    --elevation-8: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
-    --elevation-9: 0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12);
-    --elevation-10: 0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12);
-    --elevation-11: 0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12);
-    --elevation-12: 0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12);
-    --elevation-13: 0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12);
-    --elevation-14: 0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12);
-    --elevation-15: 0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12);
-    --elevation-16: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12);
-    --elevation-17: 0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12);
-    --elevation-18: 0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12);
-    --elevation-19: 0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12);
-    --elevation-20: 0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12);
-    --elevation-21: 0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12);
-    --elevation-22: 0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12);
-    --elevation-23: 0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12);
-    --elevation-24: 0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12);
-    --elevation-25: 0 5px 5px -3px rgba(0,0,0,.06), 0 8px 10px 1px rgba(0,0,0,.042), 0 3px 14px 2px rgba(0,0,0,.036);
-    
     /* MARK: Variables, generic */
     --game-width-s: 90vw;
     --game-width-m: 50vw;
@@ -206,43 +166,57 @@
     --extended-border-radius: .8rem;
     
     /* MARK: Variables, tasks */
-    --palette-task-normal: rgb(11,186,131);
+    --palette-task-normal: rgb(22, 196, 88);
     --palette-task-normal-text:  rgb(39,39,47);
-    --palette-task-normal-darken: rgb(9,154,108);
-    --palette-task-normal-lighten: rgb(14, 234, 165);
-    --palette-task-normal-hover: rgba(11,186,131,0.05);
+    --palette-task-normal-darken: rgb(16, 145, 65);
+    --palette-task-normal-lighten: rgb(38, 231, 111);
+    --palette-task-normal-hover: rgba(22, 196, 88,0.05);
+    --palette-task-normal-disabled: rgba(22, 196, 88, .5);
+    --palette-task-normal-disabled-lighten: rgba(22, 196, 88, .5);
     
-    --palette-task-travel: rgb(50,153,255);
+    --palette-task-travel: rgb(23, 112, 196);
     --palette-task-travel-text: rgb(255,255,255);
-    --palette-task-travel-darken: rgb(0, 118, 234);
-    --palette-task-travel-lighten: rgb(92,173,255);
-    --palette-task-travel-hover: rgba(50,153,255,0.05);
+    --palette-task-travel-darken: rgb(15, 73, 128);
+    --palette-task-travel-lighten: rgb(40, 138, 230);
+    --palette-task-travel-hover: rgba(23, 112, 196,0.05);
+    --palette-task-travel-disabled: rgba(23, 112, 196, .5);
+    --palette-task-travel-disabled-lighten: rgba(40, 138, 230, .5);
 
-    --palette-task-mandatory: rgb(255,168,0);
+    --palette-task-mandatory: rgb(224, 193, 68);
     --palette-task-mandatory-text:  rgb(39,39,47);
-    --palette-task-mandatory-darken: rgb(214,143,0);
-    --palette-task-mandatory-lighten: rgb(255,182,36);
-    --palette-task-mandatory-hover: rgba(255,168,0,0.05);
+    --palette-task-mandatory-darken: rgb(207, 172, 34);
+    --palette-task-mandatory-lighten: rgb(224, 226, 29);
+    --palette-task-mandatory-hover: rgba(224, 193, 68,0.05);
+    --palette-task-mandatory-disabled: rgba(224, 193, 68, .5);
+    --palette-task-mandatory-disabled-lighten: rgba(224, 226, 29, .5);
 
-    --palette-task-boss: rgb(246,78,98);
+    --palette-task-boss:  rgb(214, 60, 60);
     --palette-task-boss-text: rgb(255,255,255);
-    --palette-task-boss-darken: rgb(244,47,70);
-    --palette-task-boss-lighten: rgb(248,119,134);
+    --palette-task-boss-darken: rgb(184, 39, 39);
+    --palette-task-boss-lighten: rgb(231, 67, 68);
     --palette-task-boss-hover: rgba(246,78,98,0.05);
+    --palette-task-boss-disabled: rgba(214, 60, 60, .5);
+    --palette-task-boss-disabled-lighten: rgba(231, 67, 68, .5);
     
-    --palette-task-prestige: rgb(119,107,231);
+    --palette-task-prestige: rgb(141, 23, 196);
     --palette-task-prestige-text: rgb(255,255,255);
-    --palette-task-prestige-darken: rgb(90,75,226);
-    --palette-task-prestige-lighten: rgb(151,141,236);
+    --palette-task-prestige-darken: rgb(115, 15, 156);
+    --palette-task-prestige-lighten: rgb(166, 55, 219);
     --palette-task-prestige-hover: rgba(119,107,231,0.05);
+    --palette-task-prestige-disabled: rgba(141, 23, 196, .5);
+    --palette-task-prestige-disabled-lighten: rgba(166, 55, 219, .5);
 
 
     --palette-task-prestige-glow-1: rgba(166, 52, 219, 0.6);
     --palette-task-prestige-glow-2: rgba(166, 52, 219, 0.9);
     --palette-task-prestige-glow-3: rgba(166, 52, 219, 0.6);
-
+    
+    --palette-task-disabled: rgba(90, 90, 90, .8);
+    --palette-task-disabled-lighten: rgba(100, 100, 100, .8);
+    
     --palette-background-tooltip: rgba(0,0,0,0.8);
     --palette-background-notification: rgba(0,0,0,0.8);
+    --palette-background-overlay: rgba(0,0,0,0.8);
 }
 
 /* MARK: General */
@@ -253,9 +227,9 @@ body {
     
     display:flex;
     min-height:100vh;
-    background: linear-gradient(120deg, var(--palette-primary-darken), var(--palette-secondary-darken)) fixed;
+    background: linear-gradient(120deg, var(--palette-background-start), var(--palette-background-end)) fixed;
 
-    color: var(--palette-primary-text);
+    color: var(--typography-default-text-color);
     font-family: var(--typography-default-family), sans-serif;
     font-weight: var(--typography-default-weight);
     font-size: var(--typography-default-size);
@@ -270,12 +244,6 @@ body {
 }
 
 /* MARK: Helper CSS classes */
-.display-flex {
-    display: flex !important;
-}
-.display-block {
-    display: block !important;
-}
 .full-screen-overlay:not(.hidden) {
     display: flex;
 }
@@ -283,7 +251,6 @@ body {
     display: none !important;
 }
 .h1 {
-    color: var(--palette-primary-text);
     font-family: var(--typography-h1-family), sans-serif;
     font-weight: var(--typography-h1-weight);
     font-size: var(--typography-h1-size);
@@ -292,7 +259,6 @@ body {
     text-transform: var(--typography-h1-text-transform);
 }
 .h2 {
-    color: var(--palette-primary-text);
     font-family: var(--typography-h2-family), sans-serif;
     font-weight: var(--typography-h2-weight);
     font-size: var(--typography-h2-size);
@@ -301,7 +267,6 @@ body {
     text-transform: var(--typography-h2-text-transform);
 }
 .h3 {
-    color: var(--palette-primary-text);
     font-family: var(--typography-h3-family), sans-serif;
     font-weight: var(--typography-h3-weight);
     font-size: var(--typography-h3-size);
@@ -310,7 +275,6 @@ body {
     text-transform: var(--typography-h3-text-transform);
 }
 .h4 {
-    color: var(--palette-primary-text);
     font-family: var(--typography-h4-family), sans-serif;
     font-weight: var(--typography-h4-weight);
     font-size: var(--typography-h4-size);
@@ -319,7 +283,6 @@ body {
     text-transform: var(--typography-h4-text-transform);
 }
 .h5 {
-    color: var(--palette-primary-text);
     font-family: var(--typography-h5-family), sans-serif;
     font-weight: var(--typography-h5-weight);
     font-size: var(--typography-h5-size);
@@ -328,92 +291,12 @@ body {
     text-transform: var(--typography-h5-text-transform);
 }
 .h6 {
-    color: var(--palette-primary-text);
     font-family: var(--typography-h6-family), sans-serif;
     font-weight: var(--typography-h6-weight);
     font-size: var(--typography-h6-size);
     line-height: var(--typography-h6-lineheight);
     letter-spacing: var(--typography-h6-letterspacing);
     text-transform: var(--typography-h6-text-transform);
-}
-
-.elevation-0 {
-    box-shadow: var(--elevation-0);
-}
-.elevation-1 {
-    box-shadow: var(--elevation-1);
-}
-.elevation-2 {
-    box-shadow: var(--elevation-2);
-}
-.elevation-3 {
-    box-shadow: var(--elevation-3);
-}
-.elevation-4 {
-    box-shadow: var(--elevation-4);
-}
-.elevation-5 {
-    box-shadow: var(--elevation-5);
-}
-.elevation-6 {
-    box-shadow: var(--elevation-6);
-}
-.elevation-7 {
-    box-shadow: var(--elevation-7);
-}
-.elevation-8 {
-    box-shadow: var(--elevation-8);
-}
-.elevation-9 {
-    box-shadow: var(--elevation-9);
-}
-.elevation-10 {
-    box-shadow: var(--elevation-10);
-}
-.elevation-11 {
-    box-shadow: var(--elevation-11);
-}
-.elevation-12 {
-    box-shadow: var(--elevation-12);
-}
-.elevation-13 {
-    box-shadow: var(--elevation-13);
-}
-.elevation-14 {
-    box-shadow: var(--elevation-14);
-}
-.elevation-15 {
-    box-shadow: var(--elevation-15);
-}
-.elevation-16 {
-    box-shadow: var(--elevation-16);
-}
-.elevation-17 {
-    box-shadow: var(--elevation-17);
-}
-.elevation-18 {
-    box-shadow: var(--elevation-18);
-}
-.elevation-19 {
-    box-shadow: var(--elevation-19);
-}
-.elevation-20 {
-    box-shadow: var(--elevation-20);
-}
-.elevation-21 {
-    box-shadow: var(--elevation-21);
-}
-.elevation-22 {
-    box-shadow: var(--elevation-22);
-}
-.elevation-23 {
-    box-shadow: var(--elevation-23);
-}
-.elevation-24 {
-    box-shadow: var(--elevation-24);
-}
-.elevation-25 {
-    box-shadow: var(--elevation-25);
 }
 
 /* MARK: Main & Aside */
@@ -428,8 +311,8 @@ body {
 }
 @media (width >= 1100px) {
     main {
-        margin-left: var(--left-sidebar-width);
-        margin-right: var(--right-sidebar-width);
+        margin-left: var(25vw);
+        margin-right: var(25vw);
     }
     aside {
         position: fixed;
@@ -439,12 +322,14 @@ body {
         padding: 1rem;
     }
     aside#left-sidebar {
-        left: 0;
+        /* left: 0; */
+        right: 75vw;
         width: var(--left-sidebar-width);
     }
 
     aside#right-sidebar {
-        right: 0;
+        /* right: 0; */
+        left: 75vw;
         width: var(--right-sidebar-width);
     }
 }
@@ -463,7 +348,7 @@ main {
 }
 #top-area {
     display: flex;
-    background: var(--palette-primary);
+    background: var(--palette-primary-paper-color);
     border-radius: var(--default-border-radius);
     position: fixed;
     top: -8px;
@@ -515,12 +400,13 @@ main {
     
     background-color: var(--palette-action-default-hover);
     border-radius: var(--default-border-radius);
+    cursor:pointer;
 }
 .button:disabled{  
     box-shadow: none;
     background-color: var(--palette-action-disabled-background) !important;
     color: var(--palette-action-disabled) !important;
-    cursor: default;
+    cursor: not-allowed;
 }
 
 /* MARK: Tasks */
@@ -528,7 +414,7 @@ main {
     margin: .2rem 0 .2rem;
     padding: .5rem;
     
-    background: var(--palette-primary-lighten);
+    background: var(--palette-primary-paper-color);
     border-radius: var(--default-border-radius);
     
     display: flex;
@@ -545,23 +431,28 @@ main {
     font-size: calc(var(--typography-button-size)*0.9);
     padding:0 0;
 }
-.task button:disabled {
-    background: linear-gradient(5deg, var(--palette-action-disabled), var(--palette-action-disabled-background)) !important;
-}
-
 .task.Normal button:enabled {
     background: linear-gradient(5deg, var(--palette-task-normal), var(--palette-task-normal-lighten));
     color: var(--palette-task-normal-text);
+}
+.task.Normal button:disabled {
+    background: linear-gradient(5deg, var(--palette-task-disabled), var(--palette-task-disabled-lighten));
 }
 
 .task.Travel button:enabled {
     background: linear-gradient(5deg, var(--palette-task-travel), var(--palette-task-travel-lighten));
     color: var(--palette-task-travel-text);
 }
+.task.Travel button:disabled {
+    background: linear-gradient(5deg, var(--palette-task-travel-disabled), var(--palette-task-travel-disabled-lighten));
+}
 
 .task.Mandatory button:enabled {
     background: linear-gradient(5deg, var(--palette-task-mandatory), var(--palette-task-mandatory-lighten));
     color: var(--palette-task-mandatory-text);
+}
+.task.Mandatory button:disabled {
+    background: linear-gradient(5deg, var(--palette-task-mandatory-disabled), var(--palette-task-mandatory-disabled-lighten));
 }
 
 .task.Boss button:enabled {
@@ -569,11 +460,18 @@ main {
     color: var(--palette-task-boss-text);
 }
 
+.task.Boss button:disabled {
+    background: linear-gradient(5deg, var(--palette-task-boss-disabled), var(--palette-task-boss-disabled-lighten));
+}
+
 .task.Prestige button:enabled {
     background: linear-gradient(5deg, var(--palette-task-prestige), var(--palette-task-prestige-lighten));
     color: var(--palette-task-prestige-text);
     transition: background-color 0.2s, filter 0.2s;
     animation: prestige-glow 2s infinite;
+}
+.task.Prestige button:disabled {
+    background: linear-gradient(5deg, var(--palette-task-prestige-disabled), var(--palette-task-prestige-disabled-lighten));
 }
 
 @keyframes prestige-glow {
@@ -670,7 +568,7 @@ main {
 
 .sidebar-section {
     position: relative;
-    background: var(--palette-primary-lighten);
+    background: var(--palette-primary-paper-color);
     border-radius: var(--default-border-radius);
     padding: 5px;
 }
@@ -691,7 +589,7 @@ main {
     height: 60px;
     text-align: center;
     border-radius: var(--default-border-radius);
-    background: var(--palette-primary-lighten);
+    background: var(--palette-secondary-paper-color);
 }
 
 .sidebar-section .section-info {
@@ -749,7 +647,7 @@ main {
     align-items: center;
     color: white;
 
-    background: var(--palette-black);
+    background: var(--palette-background-overlay);
 }
 
 #game-over-box {
@@ -816,7 +714,7 @@ main {
     width: 200px;
     justify-content: center;
     align-items: center;
-    background: var(--palette-primary-darken);
+    background: var(--palette-secondary-paper-color);
     border-radius: var(--default-border-radius);
     border: 2px solid var(--palette-black);
     padding: 8px;
@@ -842,8 +740,8 @@ main {
     text-align: center;
     font-size: 2em;
     border-radius: 8px;
-    background: var(--palette-primary-lighten);
-    color: var(--palette-primary-text);
+    background: var(--palette-primary-paper-color);
+    color: var(--typography-default-text-color);
 }
 
 /* MARK: Messages
@@ -887,8 +785,7 @@ footer {
 .sidebar-item {
     width: 100%;
     text-align: center;
-    background: var(--palette-primary-lighten);
-    color: var(--palette-primary-text);
+    background: var(--palette-primary-paper-color);
     border-radius: 8px;
     padding: 5px;
     box-sizing: border-box;
